src/assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Add Your Custom CSS Here */

.katex-display {
  overflow-x: auto;
  overflow-y: hidden;
  max-width: 100%;
  -webkit-overflow-scrolling: touch;
}

.katex-display::-webkit-scrollbar {
  height: 6px;
}

.katex-display::-webkit-scrollbar-thumb {
  background: #a0a0a0;
  border-radius: 3px;
}

html.dark .katex-display::-webkit-scrollbar-thumb {
  background: #555;
}

.prose img {
  border-radius: 30px;
  max-width: 100%;
  height: auto;
  display: block; /* Optional: if centering or block behavior is desired */
  margin-left: auto; /* Optional: for centering if display: block */
  margin-right: auto; /* Optional: for centering if display: block */
}

.responsive-main-image {
  max-width: 100%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 30px; /* For visual consistency */
}

#sun {
  transform: translate3d(0, 0px, 0);
}

#moon {
  transform: translate3d(0, 0px, 0);
}

#darkToggle:hover #sun {
  transform: translate3d(0, 10px, 0);
}

#darkToggle:hover #moon {
  transform: translate3d(0, 10px, 0);
}

html.dark #darkToggle:hover .horizon {
  border-color: #718096 !important;
}

html.dark .join a.btn {
  color: white;
}

.horizon .setting {
  animation: 1s ease 0s 1 setting;
}

.horizon .rising {
  animation: 1s ease 0s 1 rising;
}

@keyframes setting {
  0% {
    transform: translate3d(0, 10px, 0);
  }

  40% {
    transform: translate3d(0, -2px, 0);
  }

  to {
    transform: translate3d(0, 30px, 0);
  }
}

@keyframes rising {
  0% {
    opacity: 0;
    transform: translate3d(0, 30px, 0);
  }

  40% {
    opacity: 1;
    transform: translate3d(0, -2px, 0);
  }

  to {
    opacity: 1;
    transform: translate3d(0, 10, 0);
  }
}

